--- a/AboutUs.html
+++ b/AboutUs.html
@@ -115,6 +115,6 @@
           document.getElementById("footer").innerHTML = data;
         });
     </script>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
