--- a/contact.html
+++ b/contact.html
@@ -129,6 +129,6 @@
           document.getElementById("footer").innerHTML = data;
         });
     </script>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
