--- a/header.html
+++ b/header.html
@@ -44,4 +44,4 @@
     <i id="close" class="fa fa-times" aria-hidden="true"></i>
   </div>
 </header>
-<script src="/main.js"></script>
+<script src="main.js"></script>
