--- a/process.html
+++ b/process.html
@@ -100,6 +100,6 @@
           document.getElementById("footer").innerHTML = data;
         });
     </script>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
