--- a/project.html
+++ b/project.html
@@ -111,6 +111,6 @@
           document.getElementById("footer").innerHTML = data;
         });
     </script>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
