--- a/testimonials.html
+++ b/testimonials.html
@@ -120,6 +120,6 @@
           document.getElementById("footer").innerHTML = data;
         });
     </script>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
