--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
       </p>
     </div>
 
-    <div class="footer-column">
+    <div class="footer-column quick-links">
       <h3>Quick Links</h3>
       <ul>
         <li><a href="index.html">Home</a></li>
