partner section updated

--- a/contact.html
+++ b/contact.html
@@ -49,57 +49,59 @@
         </div>
 
         <!-- Right Side - Contact Form -->
-        <div class="contact-form">
-          <h3>Send Us A Message</h3>
-          <form id="enquiryForm">
-            <label for="fullName">Full Name</label>
-            <input
-              type="text"
-              id="fullName"
-              name="fullName"
-              placeholder="Your full name"
-              required
-            />
+        <div class="cobtact-form-container">
+          <div class="contact-form">
+            <h3>Send Us A Message</h3>
+            <form id="enquiryForm">
+              <label for="fullName">Full Name</label>
+              <input
+                type="text"
+                id="fullName"
+                name="fullName"
+                placeholder="Your full name"
+                required
+              />
 
-            <label for="email">Email Address</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Your email address"
-              required
-            />
+              <label for="email">Email Address</label>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Your email address"
+                required
+              />
 
-            <label for="phone">Phone Number</label>
-            <input
-              type="text"
-              id="phone"
-              name="phone"
-              placeholder="Your phone number"
-              required
-            />
+              <label for="phone">Phone Number</label>
+              <input
+                type="text"
+                id="phone"
+                name="phone"
+                placeholder="Your phone number"
+                required
+              />
 
-            <label for="message">Message</label>
-            <textarea
-              id="message"
-              name="message"
-              placeholder="Tell us about your project, and any specific requirement"
-              rows="5"
-              required
-            ></textarea>
-            <div class="contact-form-btn-text">
-              <div>
-                <button type="submit" class="send-btn">Send Enquiry</button>
+              <label for="message">Message</label>
+              <textarea
+                id="message"
+                name="message"
+                placeholder="Tell us about your project, and any specific requirement"
+                rows="5"
+                required
+              ></textarea>
+              <div class="contact-form-btn-text">
+                <div>
+                  <button type="submit" class="send-btn">Send Enquiry</button>
+                </div>
+
+                <div>
+                  <p class="note">
+                    * Required fields. We respect your privacy and will never
+                    share your information.
+                  </p>
+                </div>
               </div>
-
-              <div>
-                <p class="note">
-                  * Required fields. We respect your privacy and will never
-                  share your information.
-                </p>
-              </div>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
     </section>
